...
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textview_game_end_overlay_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/win_overlay_title"
            android:textAllCaps="true"
            android:textSize="32sp"
...

        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btn_game_end_overlay_play_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/btn_primary"
            android:text="@string/play_again_button_text" />
...
