...
        - You cannot move over blank squares\n
        - Moving off a goal will turn it into a blank square\n
        - Moves can be undone but will not be removed from the move count
    </string>

    <string name="game_level_text">Level %1$d</string>
    <string name="game_move_text">Moves: %1$d</string>
    <string name="game_goal_text">Goal %1$d/%2$d</string>

    <string name="game_over_goal_text">Hit %1$d Goals</string>
    <string name="game_over_move_text">In %1$d Moves</string>
    <string name="game_over_time_text">Within %1$s</string>

    <string name="error_no_levels">ERROR: no game levels found :(</string>
...
