...

        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btn_play_pause_overlay_reset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/btn_primary"
            android:text="@string/reset_button_text" />
...
